--- a/sass/main.scss
+++ b/sass/main.scss
@@ -1,3 +1,12 @@
+// import all the partials
+@import "base/base";
+@import "base/animations";
+@import "base/utilities";
+@import "base/typography";
+@import "abstracts/variables";
+@import "abstracts/mixins";
+@import "abstracts/functions";
+@import "pages/index";
 /* CSS Reset */
 /* Box sizing rules */
 *,
@@ -73,27 +82,6 @@ select {
         scroll-behavior: auto !important;
     }
 }
-
-/* Variables for colors */
-$clr-primary-900: hsl(160, 64%, 43%);
-$clr-primary-900-80: hsla(160, 64%, 43%, 0.8);
-$clr-primary-500: hsl(140, 49%, 55%);
-$clr-primary-100: hsl(111, 55%, 64%);
-$clr-primary-100-80: hsla(111, 55%, 64%, 0.8);
-
-$clr-neutral-900: hsl(0, 0%, 0%);
-$clr-neutral-300: hsl(0, 0%, 47%);
-$clr-neutral-100: hsl(0, 0%, 100%);
-
-/* Variables for fonts */
-$ff-regular: "Lato", sans-serif;
-
-/* Variables for font weights */
-$fw-thin-100: 100;
-$fw-light-300: 300;
-$fw-regular-400: 400;
-$fw-bold-700: 700;
-$fw-black-900: 900;
 
 body {
     font-family: $ff-regular;
