Moved button styles to _buttons component

--- a/sass/main.scss
+++ b/sass/main.scss
@@ -7,6 +7,7 @@
 @import "abstracts/mixins";
 @import "abstracts/functions";
 @import "pages/home";
+@import "components/button";
 
 body {
     font-family: $ff-regular;
@@ -79,37 +80,5 @@ body {
         font-weight: $fw-bold-700;
         /* Animation to slide in the element when refreshed  */
         animation: moveInRight 1s ease-out;
-    }
-}
-
-/* Styling buttons */
-/* :link, :visited are pseudo classes */
-
-.btn {
-    &:link,
-    &:visited {
-        display: inline-block;
-        text-transform: uppercase;
-        text-decoration: none;
-        padding: 1rem 2.5rem;
-        /* Any high number for border-rafius will give the cute curve effect */
-        border-radius: 10rem;
-        /* Transition to make the control the translate */
-        transition: all 0.2;
-    }
-
-    &:hover {
-        transform: translateY(-3px);
-        box-shadow: 0 0.75rem 1.25rem hsla(0, 0, 0, 0.2);
-    }
-
-    &:active {
-        transform: translateY(1px);
-        box-shadow: 0 0.5rem 0.75rem rgba(0, 0, 0, 0.2);
-    }
-
-    &-white {
-        background-color: $clr-neutral-100;
-        color: $clr-neutral-300;
     }
 }
