--- a/sass/main.scss
+++ b/sass/main.scss
@@ -1,61 +1,18 @@
 // import all the partials
+@import "abstracts/variables"; // Variables above base because the base uses variables
 @import "base/base";
 @import "base/animations";
 @import "base/utilities";
 @import "base/typography";
-@import "abstracts/variables";
+
 @import "abstracts/mixins";
 @import "abstracts/functions";
+
 @import "pages/home";
+
 @import "components/button";
 
-body {
-    font-family: $ff-regular;
-    font-size: 1rem;
-    font-weight: $fw-regular-400;
-    color: $clr-neutral-300;
-    line-height: 1.7;
-    padding: 1.875rem;
-}
-
-.header {
-    height: 95vh;
-    /* Overlay color on the background image */
-    background-image: linear-gradient(
-            to right bottom,
-            $clr-primary-100-80,
-            $clr-primary-900-80
-        ),
-        url(../img/hero.jpg);
-    background-size: cover;
-    background-position: top;
-    position: relative;
-    /* To cut the image */
-    clip-path: polygon(0% 0%, 100% 0%, 100% 75vh, 0% 100%);
-
-    &__logo-box {
-        /* 
-        origin coordinate is at the top-left corner of the parent element,
-        if the parent element has a position of reletive 
-        */
-        position: absolute;
-        top: 2.5rem;
-        left: 2.5rem;
-    }
-    &__logo {
-        height: 2.25rem;
-    }
-
-    &__text-box {
-        /* To position the heading in the center of the page */
-        position: absolute;
-        top: 40%;
-        left: 50%;
-        transform: translate(-50%, -50%);
-        /* To center the content of the box */
-        text-align: center;
-    }
-}
+@import "layout/header";
 
 .heading-primary {
     color: $clr-neutral-100;
