Added variables for grid sizes and gutters

--- a/sass/abstracts/_variables.scss
+++ b/sass/abstracts/_variables.scss
@@ -18,3 +18,8 @@ $fw-light-300: 300;
 $fw-regular-400: 400;
 $fw-bold-700: 700;
 $fw-black-900: 900;
+
+//GRID
+$grid-width: 71.25rem;
+$gutter-vertical: 2rem;
+$gutter-horizontal: 1.5rem;
