--- a/css/main.css
+++ b/css/main.css
@@ -173,3 +173,32 @@ body {
     transform: translate(-50%, -50%);
     /* To center the content of the box */
     text-align: center; }
+
+.row {
+  width: 71.25rem;
+  background-color: goldenrod;
+  margin: 0 auto; }
+  .row:not(:last-child) {
+    margin-bottom: 2rem; }
+  .row::after {
+    content: "";
+    display: table;
+    clear: both; }
+  .row [class^="col-"] {
+    background-color: #80d671;
+    padding: 1rem;
+    float: left; }
+    .row [class^="col-"]:not(:last-child) {
+      margin-right: 1.5rem; }
+  .row .col-1-of-2 {
+    width: calc((100% - 1.5rem) / 2); }
+  .row .col-1-of-3 {
+    width: calc((100% - 2 * 1.5rem) / 3); }
+  .row .col-2-of-3 {
+    width: calc( 2 * ((100% - 2 * 1.5rem) / 3) + 1.5rem); }
+  .row .col-1-of-4 {
+    width: calc((100% - 3 * 1.5rem) / 4); }
+  .row .col-2-of-4 {
+    width: calc( 2 * ((100% - 3 * 1.5rem) / 4) + 1.5rem); }
+  .row .col-3-of-4 {
+    width: calc( 3 * ((100% - 3 * 1.5rem) / 4) + 2 * 1.5rem); }
