Added a darker shade of white in variables

--- a/sass/abstracts/_variables.scss
+++ b/sass/abstracts/_variables.scss
@@ -7,6 +7,7 @@ $clr-primary-100-80: hsla(111, 55%, 64%, 0.8);
 
 $clr-neutral-900: hsl(0, 0%, 0%);
 $clr-neutral-300: hsl(0, 0%, 47%);
+$clr-neutral-200: hsl(0, 0%, 97%);
 $clr-neutral-100: hsl(0, 0%, 100%);
 
 /* Variables for fonts */
