--- a/sass/components/_button.scss
+++ b/sass/components/_button.scss
@@ -29,3 +29,27 @@
         color: $clr-neutral-300;
     }
 }
+
+.btn-text {
+    &:link,
+    &:visited {
+        font-size: 1rem;
+        color: $clr-primary-900;
+        display: inline-block;
+        text-decoration: none;
+        border-bottom: 1px solid currentColor;
+        padding: 3px;
+        transition: all 0.2s;
+    }
+    &:hover {
+        background-color: $clr-primary-900;
+        color: $clr-neutral-100;
+        box-shadow: 0 1rem 2rem rgba($clr-neutral-900, 0.15);
+        transform: translateY(-2px);
+    }
+
+    &:active {
+        box-shadow: 0 0.5rem 1rem rgba($clr-neutral-900, 0.15);
+        transform: translateY(1px);
+    }
+}
