Added more colors to variables file

--- a/sass/abstracts/_variables.scss
+++ b/sass/abstracts/_variables.scss
@@ -5,6 +5,12 @@ $clr-primary-500: hsl(140, 49%, 55%);
 $clr-primary-100: hsl(111, 55%, 64%);
 $clr-primary-100-80: hsla(111, 55%, 64%, 0.8);
 
+$clr-secondary-100: hsl(44, 100%, 50%);
+$clr-secondary-900: hsl(21, 100%, 59%);
+
+$clr-tertiary-100: hsl(209, 100%, 58%);
+$clr-tertiary-900: hsl(246, 95%, 62%);
+
 $clr-neutral-900: hsl(0, 0%, 0%);
 $clr-neutral-300: hsl(0, 0%, 47%);
 $clr-neutral-200: hsl(0, 0%, 97%);
