--- a/css/main.css
+++ b/css/main.css
@@ -163,6 +163,7 @@ body {
   margin-top: -20vh; }
 
 .section-features {
+  padding: 10rem 0;
   /* Overlay color on the background image */
   background-image: linear-gradient(to right bottom, rgba(128, 214, 113, 0.8), rgba(39, 180, 133, 0.8)), url(../img/nat-4.jpg);
   background-size: cover;
@@ -170,6 +171,10 @@ body {
   transform: skewY(-7deg); }
   .section-features > * {
     transform: skewY(7deg); }
+
+.section-tours {
+  background-color: #f7f7f7;
+  padding: 15.625rem 0 31.25rem 0; }
 
 /* Styling buttons */
 /* :link, :visited are pseudo classes */
@@ -252,6 +257,104 @@ body {
   transition: all 0.2s; }
   .feature-box:hover {
     transform: translateY(-1rem) scale(1.05); }
+
+.card {
+  perspective: 100rem;
+  -moz-perspective: 100rem;
+  height: 31.25rem;
+  position: relative; }
+  .card__side {
+    transition: all 0.8s ease;
+    position: absolute;
+    height: 31.25rem;
+    top: 0;
+    left: 0;
+    width: 100%;
+    backface-visibility: hidden;
+    border-radius: 3px;
+    overflow: hidden;
+    box-shadow: 0 1rem 2.5rem rgba(0, 0, 0, 0.15); }
+    .card__side--front {
+      background-color: white; }
+    .card__side--back {
+      transform: rotateY(180deg); }
+      .card__side--back-1 {
+        background-image: linear-gradient(to right bottom, #ffbb00, #ff772e), url(../img/nat-1-large.jpg);
+        background-size: cover;
+        background-position: center; }
+      .card__side--back-2 {
+        background-image: linear-gradient(to right bottom, #80d671, #27b485), url(../img/nat-1-large.jpg);
+        background-size: cover;
+        background-position: center; }
+      .card__side--back-3 {
+        background-image: linear-gradient(to right bottom, #2997ff, #5442fa), url(../img/nat-1-large.jpg);
+        background-size: cover;
+        background-position: center; }
+  .card:hover .card__side--front {
+    transform: rotateY(-180deg); }
+  .card:hover .card__side--back {
+    transform: rotateY(0deg); }
+  .card__picture {
+    background-size: cover;
+    height: 14.375rem;
+    background-blend-mode: screen;
+    clip-path: polygon(0 0, 100% 0, 100% 85%, 0 100%); }
+    .card__picture--1 {
+      background-image: linear-gradient(to right bottom, #ffbb00, #ff772e), url(../img/nat-5.jpg); }
+    .card__picture--2 {
+      background-image: linear-gradient(to right bottom, #80d671, #27b485), url(../img/nat-6.jpg); }
+    .card__picture--3 {
+      background-image: linear-gradient(to right bottom, #2997ff, #5442fa), url(../img/nat-7.jpg); }
+  .card__heading {
+    font-size: calc(28 / 16 * 1rem);
+    font-weight: 300;
+    text-transform: uppercase;
+    color: white;
+    text-align: right;
+    position: absolute;
+    top: calc(120 / 16 * 1rem);
+    right: calc(20 / 16 * 1rem);
+    width: 75%; }
+  .card__heading-span {
+    padding: 0.5rem 1rem;
+    box-decoration-break: clone;
+    -webkit-box-decoration-break: clone; }
+    .card__heading-span--1 {
+      background-image: linear-gradient(to right, #ffbb00, #ff772e); }
+    .card__heading-span--2 {
+      background-image: linear-gradient(to right, #80d671, #27b485); }
+    .card__heading-span--3 {
+      background-image: linear-gradient(to right, #2997ff, #5442fa); }
+  .card__details {
+    padding: 1rem; }
+    .card__details ul {
+      padding: 0;
+      list-style: none;
+      width: 80%;
+      margin: 0 auto; }
+    .card__details li {
+      text-align: center;
+      font-size: 1rem;
+      padding: 0.5rem; }
+      .card__details li:not(:last-child) {
+        border-bottom: 1px solid #787878; }
+  .card__cta {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    width: 90%;
+    text-align: center; }
+  .card__price-box {
+    text-align: center;
+    color: white;
+    margin-bottom: 6rem; }
+  .card__price-only {
+    font-size: 1rem;
+    text-transform: uppercase; }
+  .card__price-value {
+    font-size: 4rem;
+    font-weight: 300; }
 
 .header {
   height: 95vh;
