Added and Styled experience section

--- a/sass/pages/_home.scss
+++ b/sass/pages/_home.scss
@@ -24,5 +24,9 @@
 
 .section-tours {
     background-color: $clr-neutral-200;
-    padding: 15.625rem 0 31.25rem 0;
+    padding: 15.625rem 0 10rem 0;
+}
+
+.section-stories {
+    background-color: $clr-neutral-200;
 }
