--- a/css/main.css
+++ b/css/main.css
@@ -179,6 +179,20 @@ body {
 .section-stories {
   background-color: #f7f7f7; }
 
+.section-book {
+  padding: 5rem 0;
+  margin-top: 5rem;
+  background-image: linear-gradient(to right bottom, #80d671, #27b485); }
+
+.book {
+  background-image: linear-gradient(105deg, rgba(255, 255, 255, 0.9) 0%, rgba(255, 255, 255, 0.9) 50%, transparent 50%), url(../img/nat-10.jpg);
+  background-size: 100%;
+  border-radius: 3px;
+  height: 35rem; }
+  .book__form {
+    padding: 3rem;
+    width: 50%; }
+
 /* Styling buttons */
 /* :link, :visited are pseudo classes */
 .btn:link, .btn:visited {
@@ -401,6 +415,43 @@ body {
     transform: translate(-50%, -50%); }
   .story:hover .story__img {
     filter: blur(3px) brightness(90%); }
+
+.form__group:not(:last-child) {
+  margin-bottom: 1.25rem; }
+
+.form__input {
+  font-size: 1rem;
+  width: 100%;
+  font-family: inherit;
+  color: inherit;
+  padding: 1rem 1.25rem;
+  border-radius: 2px;
+  border: none;
+  background-color: rgba(255, 255, 255, 0.5);
+  border-bottom: 3px solid transparent; }
+  .form__input:focus {
+    outline: none;
+    background-color: rgba(255, 255, 255, 0.8);
+    box-shadow: 0 0.25rem 0.5rem #262626;
+    border-bottom: 3px solid #27b485; }
+  .form__input:focus:invalid {
+    box-shadow: none;
+    border-bottom: 3px solid #ff772e; }
+  .form__input::-webkit-input-placeholder {
+    color: #787878; }
+
+.form__label {
+  font-size: 0.75rem;
+  font-weight: 700;
+  margin-left: 1.25rem;
+  margin-top: 0.5rem;
+  display: block;
+  transition: all 0.4s; }
+
+.form__input:placeholder-shown + .form__label {
+  opacity: 0;
+  visibility: hidden;
+  transform: translateY(-4rem); }
 
 .header {
   height: 95vh;
