--- a/sass/pages/_home.scss
+++ b/sass/pages/_home.scss
@@ -30,3 +30,31 @@
 .section-stories {
     background-color: $clr-neutral-200;
 }
+
+.section-book {
+    padding: 5rem 0;
+    margin-top: 5rem;
+    background-image: linear-gradient(
+        to right bottom,
+        $clr-primary-100,
+        $clr-primary-900
+    );
+}
+
+.book {
+    background-image: linear-gradient(
+            105deg,
+            rgba(255, 255, 255, 0.9) 0%,
+            rgba(255, 255, 255, 0.9) 50%,
+            transparent 50%
+        ),
+        url(../img/nat-10.jpg);
+    background-size: 100%;
+    border-radius: 3px;
+    height: 35rem;
+
+    &__form {
+        padding: 3rem;
+        width: 50%;
+    }
+}
