--- a/css/main.css
+++ b/css/main.css
@@ -421,14 +421,16 @@ body {
 
 .form__input {
   font-size: 1rem;
-  width: 100%;
+  width: 90%;
+  display: block;
   font-family: inherit;
   color: inherit;
   padding: 1rem 1.25rem;
   border-radius: 2px;
   border: none;
   background-color: rgba(255, 255, 255, 0.5);
-  border-bottom: 3px solid transparent; }
+  border-bottom: 3px solid transparent;
+  transition: all 0.4s; }
   .form__input:focus {
     outline: none;
     background-color: rgba(255, 255, 255, 0.8);
@@ -452,6 +454,45 @@ body {
   opacity: 0;
   visibility: hidden;
   transform: translateY(-4rem); }
+
+.form__radio-group {
+  width: 49%;
+  display: inline-block; }
+
+.formradio-input {
+  display: none; }
+
+.form__radio-label {
+  font-size: 1rem;
+  cursor: pointer;
+  position: relative;
+  padding-left: 2rem; }
+
+.form__radio-button {
+  height: 1.75rem;
+  width: 1.75rem;
+  border-radius: 50%;
+  border: 5px solid #80d671;
+  display: inline-block;
+  position: absolute;
+  left: 0;
+  top: -4px; }
+  .form__radio-button::after {
+    content: "";
+    display: block;
+    height: 0.75rem;
+    width: 0.75rem;
+    border-radius: 50%;
+    background-color: #80d671;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    opacity: 0;
+    transition: all 0.4s; }
+
+.form__radio-input:checked + .form__radio-label .form__radio-button::after {
+  opacity: 1; }
 
 .header {
   height: 95vh;
