--- a/sass/base/_utilities.scss
+++ b/sass/base/_utilities.scss
@@ -1,10 +1,10 @@
 .u-center-text {
-    text-align: center;
+    text-align: center !important;
 }
 .u-margin-bottom-big {
-    margin-bottom: 5rem;
+    margin-bottom: 5rem !important;
 }
 
 .u-margin-bottom-small {
-    margin-bottom: 1.25rem;
+    margin-bottom: 1.25rem !important;
 }
