--- a/css/main.css
+++ b/css/main.css
@@ -102,13 +102,13 @@ body {
     transform: translate(0); } }
 
 .u-center-text {
-  text-align: center; }
+  text-align: center !important; }
 
 .u-margin-bottom-big {
-  margin-bottom: 5rem; }
+  margin-bottom: 5rem !important; }
 
 .u-margin-bottom-small {
-  margin-bottom: 1.25rem; }
+  margin-bottom: 1.25rem !important; }
 
 .heading-primary {
   color: white;
@@ -205,7 +205,8 @@ body {
   /* Transition to make the control the translate */
   transition: all 0.2; }
 
-.btn:hover {
+.btn:hover, .btn:focus {
+  outline: none;
   transform: translateY(-3px);
   box-shadow: 0 0.75rem 1.25rem rgba(0, 0, 0, 0.2); }
 
@@ -216,6 +217,14 @@ body {
 .btn-white {
   background-color: white;
   color: #787878; }
+
+.btn-green {
+  background-color: #54c47a;
+  padding: 1rem 2.5rem;
+  color: white;
+  border-radius: 10rem;
+  border: none;
+  box-shadow: 0 0.5rem 1.25rem rgba(0, 0, 0, 0.2); }
 
 .btn-text:link, .btn-text:visited {
   font-size: 1rem;
@@ -459,9 +468,6 @@ body {
   width: 49%;
   display: inline-block; }
 
-.formradio-input {
-  display: none; }
-
 .form__radio-label {
   font-size: 1rem;
   cursor: pointer;
@@ -490,6 +496,9 @@ body {
     transform: translate(-50%, -50%);
     opacity: 0;
     transition: all 0.4s; }
+
+.form__radio-input {
+  display: none; }
 
 .form__radio-input:checked + .form__radio-label .form__radio-button::after {
   opacity: 1; }
