--- a/sass/abstracts/_variables.scss
+++ b/sass/abstracts/_variables.scss
@@ -12,6 +12,7 @@ $clr-tertiary-100: hsl(209, 100%, 58%);
 $clr-tertiary-900: hsl(246, 95%, 62%);
 
 $clr-neutral-900: hsl(0, 0%, 0%);
+$clr-neutral-600: hsl(0, 0%, 20%);
 $clr-neutral-300: hsl(0, 0%, 47%);
 $clr-neutral-200: hsl(0, 0%, 97%);
 $clr-neutral-100: hsl(0, 0%, 100%);
