Added and Styled Links to the navigation bar

--- a/css/main.css
+++ b/css/main.css
@@ -591,3 +591,63 @@ body {
     color: #80d671;
     box-shadow: 0 0.6rem 1rem rgba(0, 0, 0, 0.2);
     transform: rotate(5deg) scale(1.3); }
+
+.navigation__checkbox {
+  display: none; }
+
+.navigation__button {
+  background-color: white;
+  height: 4.25rem;
+  width: 4.25rem;
+  border-radius: 50%;
+  position: fixed;
+  top: 3.75rem;
+  right: 3.75rem;
+  z-index: 201; }
+
+.navigation__background {
+  height: 3.75rem;
+  width: 3.75rem;
+  border-radius: 50%;
+  position: fixed;
+  top: 4rem;
+  right: 4rem;
+  background-image: radial-gradient(#80d671, #27b485);
+  z-index: 200;
+  transform: scale(60); }
+
+.navigation__nav {
+  height: 100vh;
+  width: 100%;
+  position: fixed;
+  top: 0;
+  left: 0;
+  z-index: 202; }
+
+.navigation__list {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  list-style: none;
+  text-align: center; }
+
+.navigation__item {
+  margin: 0.75rem; }
+
+.navigation__link:link, .navigation__link:visited {
+  display: inline-block;
+  font-size: 2rem;
+  padding: 0.5rem 1.25rem;
+  font-weight: 300;
+  color: white;
+  text-decoration: none;
+  text-transform: uppercase;
+  background-image: linear-gradient(120deg, transparent 0%, transparent 50%, white 50%);
+  background-size: 220%;
+  transition: all 0.4s; }
+
+.navigation__link:hover, .navigation__link:active {
+  background-position: 100%;
+  color: #27b485;
+  transform: translateX(1rem); }
