--- a/css/main.css
+++ b/css/main.css
@@ -614,15 +614,17 @@ body {
   right: 4rem;
   background-image: radial-gradient(#80d671, #27b485);
   z-index: 200;
-  transform: scale(60); }
+  transition: transform 0.8s; }
 
 .navigation__nav {
   height: 100vh;
-  width: 100%;
   position: fixed;
   top: 0;
   left: 0;
-  z-index: 202; }
+  z-index: 202;
+  opacity: 0;
+  width: 0;
+  transition: opacity 0.8s; }
 
 .navigation__list {
   position: absolute;
@@ -650,4 +652,11 @@ body {
 .navigation__link:hover, .navigation__link:active {
   background-position: 100%;
   color: #27b485;
-  transform: translateX(1rem); }
+  transform: translateX(0.5rem); }
+
+.navigation__checkbox:checked ~ .navigation__background {
+  transform: scale(60); }
+
+.navigation__checkbox:checked ~ .navigation__nav {
+  opacity: 1;
+  width: 100%; }
